discussion/kv_engine/182822/182822_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit 'a6922c068' into 'couchbase/master'

Conflict in hash_table.cc (new parameter on StoredValueProxy ctor)

* commit 'a6922c068':
  MB-53922: Remove ~StoredValueProxy

Change-Id: I102b4399edac8b59b947391605c816eac1b09e1f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-16 12:47:24.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-16 12:56:25.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42921/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/hash_table.cc:65:7:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42921/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21866/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:65:7: error: member initializer "valueStats" does not name a non-static data member or base class [clang-diagnostic-error]
      valueStats(stats) {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1031:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1032:71: error: no type named "RetSVPTag" in "HashTable::StoredValueProxy" [clang-diagnostic-error]
HashTable::StoredValueProxy HashTable::findForWrite(StoredValueProxy::RetSVPTag,
                                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1044:22: error: no matching constructor for initialization of "HashTable::StoredValueProxy" [clang-diagnostic-error]
    StoredValueProxy prepare{std::move(result.lock), result.pendingSV};
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.h:736:9: note: candidate constructor not viable: requires single argument "other", but 2 arguments were provided
        StoredValueProxy(const StoredValueProxy& other) = delete;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.h:740:9: note: candidate constructor not viable: requires 1 argument, but 2 were provided
        StoredValueProxy(StoredValueProxy&&) = default;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:60:30: note: candidate constructor not viable: requires 3 arguments, but 2 were provided
HashTable::StoredValueProxy::StoredValueProxy(HashBucketLock&& hbl,
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1440:53: error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
    const auto preProps = valueStats.prologue(&value);
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:518:1: note: "prologue" declared here
HashTable::Statistics::StoredValueProperties HashTable::Statistics::prologue(
^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21866/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:65:7:
error: member initializer "valueStats" does not name a non-static data member or base class [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21866/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51144/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/hash_table.cc(65): error C2327: "HashTable::valueStats": is not a type name, static, or enumerator ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51144/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11594/ : FAILURE

Compile error at [2022-11-16T12:49:43.340Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/hash_table.cc:65:7:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11594/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/623/ : FAILURE

Compile error at [2022-11-16T12:49:52.358Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/engines/ep/src/hash_table.cc:65:7:
error: class ?HashTable::StoredValueProxy? does not have any field named ?valueStats?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/623/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11683/ : FAILURE

Compile error at [2022-11-16T12:50:33.371Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/hash_table.cc:65:7:
error: class ?HashTable::StoredValueProxy? does not have any field named ?valueStats?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11683/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23912/ : FAILURE

Compile error at [2022-11-16T12:50:28.969Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/hash_table.cc:65:7:
error: class ?HashTable::StoredValueProxy? does not have any field named ?valueStats?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23912/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24326/ : FAILURE

Compile error at [2022-11-16T12:50:24.787Z] ../kv_engine/engines/ep/src/hash_table.cc:65:7:
error: class ?HashTable::StoredValueProxy? does not have any field named ?valueStats?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24326/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23370/ : FAILURE

Compile error at [2022-11-16T12:52:33.884Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/src/hash_table.cc:65:7:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23370/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32331/ : FAILURE

Compile error at [2022-11-16T12:52:17.788Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/hash_table.cc:65:7:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32331/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25164/ : FAILURE

Compile error at [2022-11-16T12:51:26.753Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/hash_table.cc:65:7:
error: member initializer "valueStats" does not name a non-static data member or base class
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25164/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21221/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
